finalize lab4